# dev-vault

./: .clausidian.json  .env.local  .env.popular-posts.example  .gitignore  .mcp.json  AGENT.md  AGENTS.md  CASE_STUDY_4_CONTEXT_ENGINEERING_DATA.md  CLAUDE.md  CONFIG_OPTIMIZATION_2026-04-12.md  CONVENTIONS.md  DEPLOYMENT-SUMMARY.txt  EXECUTION-SUMMARY.txt  FINAL_REPORT.md  FINAL_VAULT_ASSESSMENT.md  GIT-COMMIT-MESSAGE.txt  Gospel_Unit_4_DELIVERY_REPORT.md  Gospel_Unit_4_FINAL_ARTICLE.md  Gospel_Unit_4_QUICK_REFERENCE.txt  Gospel_Unit_4_Research_Summary.md  MAINTENANCE_SCHEDULER_SETUP.md  MAINTENANCE_SETUP.md  OPTIMIZATION_FINAL_REPORT.md  PERFORMANCE_VERIFICATION_CHECKLIST.md  PERFORMANCE_VERIFICATION_EXECUTION_SUMMARY.txt  PERFORMANCE_VERIFICATION_REPORT.md  PHASE-13-16-COMPLETION-REPORT.txt  PHASE-13-16-INDEX.txt  PHASE-21-27-SETUP-COMPLETE.txt  PHASE-5-8-QUICK-COMMANDS.sh  PHASE17-20_EXECUTION_SUMMARY.txt  PHASE1_EXECUTION_REPORT.md  PHASE1_RECOMMENDATIONS.json  PHASE2_FINAL_STATUS.txt  PHASE2_STATUS_REPORT.md  PHASE3_BATCH1_SEO_DATA.json  PHASE3_EXECUTION_PLAN.md  PHASE3_FINAL_EVALUATION.md  PHASE3_FINAL_REPORT.txt  PHASE3_PROGRESS_REPORT.md  (+56 more)
.claude/: config.json  (+4 more)
projects/tools/research-pipeline/: README.md  __init__.py  config.py  evaluator.py  models.py  orchestrator.py  perf_test.py  poc_runner.py  pyproject.toml  rubric.py  sanitizer.py  scanner_memory.py
projects/tools/research-pipeline/agent_memory/: __init__.py  fallback.py  http_server.py  mcp_server.py  mcp_tools.py  models.py
projects/tools/research-pipeline/knowledge/: __init__.py  indexer.py
(+1001 files in other folders)
