[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "watermark-removal"
version = "0.9.0"
description = "Computer vision system for watermark removal using Crop-Inpaint-Stitch approach"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "aiohttp>=3.8.0",
    "scikit-image>=0.21.0",
    "optuna>=3.0.0",
]

[project.optional-dependencies]
streaming = [
    "fastapi>=0.100.0",
    "pydantic>=2.0",
    "uvicorn>=0.23.0",
]
gpu = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
]
dev = [
    "pytest>=7.0,<9.0",
    "pytest-asyncio>=0.21.0,<0.24.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
