[project]
name = "research-pipeline"
version = "0.1.0"
description = "Automated LLM tech research pipeline for Claude Code toolchain"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.52",
    "pydantic>=2.0",
]

[project.optional-dependencies]
knowledge = [
    "lancedb>=0.6",
    "lightrag-hku>=1.0",
    "sentence-transformers>=3.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
